# ai-bootcamp-w3

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml
.github/: copilot-instructions.md
.github/agents/: copilot-instructions.md
.specify/memory/: constitution.md
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  entrypoint.sh  mypy.ini  pyproject.toml  pytest.ini
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 001_initial_schema.py  002_export_preferences.py  003_export_history.py
backend/src/: config.py  main.py
backend/src/api/: connections.py  exports.py  metadata.py  nl2sql.py  queries.py
backend/src/models/: __init__.py  connection.py  export_history.py  export_preferences.py  metadata_cache.py  query_history.py
backend/src/schemas/: __init__.py  connection.py  export.py  metadata.py  nl2sql.py  query.py
backend/src/services/: connection_service.py  csv_formatter.py  export_service.py  json_formatter.py  metadata_service.py  nl2sql_service.py  query_service.py  stream_exporter.py
backend/src/utils/: database.py  filename_sanitizer.py  security.py  sql_validator.py
frontend/: .dockerignore  .env.example  .eslintrc.json  Dockerfile  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css
scripts/: rebuild.sh
specs/001-db-query-tool/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-docker-compose/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-data-export/: FEATURE_EXPORT.md  data-model.md  plan.md  quickstart.md  spec.md  (+2 more)
(+30 files in other folders)
